fixed alignment of icons in back/forward buttons

--- a/app/pages/config/installWizard/installWizard.less
+++ b/app/pages/config/installWizard/installWizard.less
@@ -5,6 +5,9 @@
   margin-top: 15px;
   .nextButton, .backButton {
     .button-size(@padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @border-radius-large);
+    .glyphicon {
+      vertical-align: text-top;
+    }
   }
   .nextButton {
     float: right;
